style/style.css
@font-face {
    font-family: 'Baskervville';
    src: url(Baskervville-Regular.ttf) format('truetype');
}

html {
    background-color: #232323;
    color: #fff;
    font-family: 'Baskervville', serif;
}

body {
    background-color: #232323;
    background-image: url('../image/background.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
}

input {
    font-size: inherit;
    font-family: inherit;
    color: inherit;
    background-color: #232323;
    border: none;
    border-bottom: 1px solid #fff;
    width: fit-content;
}

button {
    font-size: inherit;
    font-family: inherit;
    color: inherit;
    background-color: #232323;
    border: 2px solid #575757;
    border-radius: 5px;
    padding: 5px 10px;
    cursor: pointer;
    margin-right: 20px;
    margin-bottom: 10px;

    &:hover {
        background-color: #3f3f3f;
    }
}

#main {
    background-color: #5b5b5bb0;
}

#pantheon {
    font-size: xxx-large;
    text-align: center;
    display: flex;
    background: #2b2a2ae3;
}

.pantheon-name {
    align-self: center;
    margin-left: 250px;
}

#pantheon-detail {
    margin-top: 5px;
    display: grid;
    grid-template-columns: 1fr repeat(4, 2fr);
    grid-template-rows: repeat(4, 0fr);
    grid-column-gap: 5px;
    grid-row-gap: 5px;
    grid-auto-flow: column;

    &>div {
        background: #2b2a2ae3;
        padding: 10px;
    }
}

.age {
    font-size: large;
    align-content: center;
    text-align: center;
    color: rgb(215, 199, 172);

    & .age-icon {
        width: 150px;
        height: 150px;
        object-fit: contain;
    }
}

.power-detail,
.wonder-detail,
.myth-detail {
    text-align: center;
    margin-top: 5px;
}


.power-name,
.wonder-name,
.myth-name {
    margin-left: 10px;

    & input {
        display: none;
    }
}

.god-portrait {
    text-align: center;

    img {
        width: 100px;
        height: 100px;
        object-fit: contain;
        cursor: pointer;
    }

}

.god-detail,
.titan-detail {
    text-align: center;
}

.wonder-icon,
.power-icon,
.myth-icon {
    width: 36px;
    height: 36px;
    object-fit: contain;
    margin-left: 10px;
    text-align: center;
    cursor: pointer;
}

.god-name-input,
.pantheon-name-input,
.titan-name-input {
    display: none;
}

.load-img-input {
    display: none;
}

.pantheon-name-input {
    font-size: xx-large;
    text-align: center;
}

.titan-name-input {
    font-size: x-large;
    text-align: center;
}

.titan {
    margin-top: 10px;
    display: flex;
    margin-left: 100px;

    .titan-portrait img {
        width: 80px;
        height: 80px;
        object-fit: contain;
        cursor: pointer;
    }

    .titan-detail {
        margin-left: 20px;
        align-self: center;
        font-size: xx-large;
    }
}

.pantheon-name-label,
.god-name-label,
.titan-name-label,
.power-name-label,
.wonder-name-label,
.myth-name-label {
    cursor: pointer;
}

.overlay {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.9);
    overflow-x: hidden;
    transition: 0.5s;

    h3 {
        margin-top: 0;
    }

    a {
        padding: 8px;
        text-decoration: none;
        font-size: 1em;
        color: #818181;
        display: inline-block;
        margin-left: 20px;
        transition: 0.3s;

        &:hover,
        &:focus {
            color: #f1f1f1;
        }
    }

    #close-setting {
        position: absolute;
        right: 45px;
        font-size: 60px
    }
}

.overlay-content {
    position: relative;
    margin-left: 10px;
    color: white;
    width: 90%;

    .setting {
        display: flex;
        flex-wrap: wrap;
        margin: 20px;
        width: 247px;
    }

    label {
        margin-bottom: 10px;
        display: inline-block;
        border: 1px solid white;
        margin-right: 1rem;
        padding: 0.5em;
        cursor: pointer;
    }

    label:has(input[type=checkbox]):hover {
        opacity: 0.5;
    }

    label:has(input[type=checkbox]:focus-visible) {
        opacity: 0.5;
    }

    label:has(input[type=checkbox]:checked) {
        background: color-mix(in srgb, currentcolor 50%, transparent);
    }

    input[type=checkbox] {
        position: absolute;
        width: 1px;
        height: 1px;
        margin: 0;
        margin-top: 4px;
        outline: none;
        border: 1px solid transparent;
        background-color: transparent;
    }
}

@media screen and (max-height: 450px) {
    .overlay a {
        font-size: 20px
    }

    .overlay #close-setting {
        font-size: 40px;
        right: 35px;
    }
}

#open-setting {
    font-size: 1.5em;
    color: white;
    cursor: pointer;
    font-weight: bold;
    padding: 5px 10px;
    background-color: #3b3b3b;

    &:hover {
        background-color: #575757;
    }
}

